@@ -109,6 +109,7 @@ export(percent_weight)
 export(point.in.sequence)
 export(position_jitter_tern)
 export(position_nudge_tern)
+export(rgb2hex)
 export(rline)
 export(scale_L_continuous)
 export(scale_R_continuous)
@@ -138,6 +139,8 @@ export(theme_bluedark)
 export(theme_bluelight)
 export(theme_bordersonbottom)
 export(theme_bordersontop)
+export(theme_bvbg)
+export(theme_bvbw)
 export(theme_bw)
 export(theme_classic)
 export(theme_clockwise)
